[gd_scene load_steps=5 format=3 uid="uid://bex8yi8mrx74j"]

[ext_resource type="Texture2D" uid="uid://bn4w6m6qwv8mi" path="res://assets/events/event_cookies.png" id="1_xtjut"]
[ext_resource type="Script" uid="uid://bcuptad7c2sdd" path="res://scenes/events/scripts/event_cookies.gd" id="2_xtjut"]
[ext_resource type="Texture2D" uid="uid://mr72xt042a50" path="res://assets/events/event_table.png" id="3_nj5pl"]
[ext_resource type="PackedScene" uid="uid://7oddtca3vwkj" path="res://scenes/button.tscn" id="4_u3wud"]

[node name="Event" type="Sprite2D"]
texture = ExtResource("1_xtjut")
centered = false
script = ExtResource("2_xtjut")
metadata/_edit_lock_ = true

[node name="EventTable" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_nj5pl")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CanvasGroup" type="CanvasGroup" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/CanvasGroup"]
offset_left = 128.0
offset_top = 384.0
offset_right = 607.0
offset_bottom = 452.0
theme_override_font_sizes/font_size = 42
text = "Pack of cookies"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/CanvasGroup"]
offset_left = 128.0
offset_top = 456.0
offset_right = 527.0
offset_bottom = 458.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CanvasGroup"]
offset_left = 128.0
offset_top = 482.0
offset_right = 376.0
offset_bottom = 592.0

[node name="Button" parent="CanvasLayer/CanvasGroup/VBoxContainer" instance=ExtResource("4_u3wud")]
layout_mode = 2
text = "Take it"

[node name="Button2" parent="CanvasLayer/CanvasGroup/VBoxContainer" instance=ExtResource("4_u3wud")]
layout_mode = 2
text = "Leave it there"

[connection signal="pressed" from="CanvasLayer/CanvasGroup/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CanvasGroup/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
